fix zoom in on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,9 @@
 @tailwind utilities;
 
 :root { color-scheme: dark; }
-html, body, #root { height: 100%; }
+
+html, body, #root {
+    height: 100%;
+    -webkit-text-size-adjust: 100%;
+    text-size-adjust: 100%;
+}
